feat: add partner tz
